--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,11 +70,11 @@
                 <div class="col-md-6 col-sm-12">
                     <h1>用区块链技术改进<br>您现有的业务模式</h1>
                     <div class="h2-banner h2-border color-white">
-                        把区块链融入到您所在的行业<br>我们可以提供技术和解决方案，帮助您的企业简化办事流程、提高办事效率，并确保制度的公平和公正。</div>
+                        我们提供基于区块链的技术和不同行业的解决方案，<br>把区块链融入到您所在的行业中，<br>帮助您的企业简化办事流程、提高办事效率，并确保规章制度的公平和公正。</div>
                     <div class="banner-text">
-                        OpenLedger提供区块链技术解决方案和定制化区块链系统的开发，用技术去推动各个行业、商业模式从传统到区块链技术的改变，为真正的商业转型提供动力。
-                        <br><br>基于革命性的去中心化网络来构建新的业务管理软件。
-                        <br><br>在我们提供的区块链技术服务上建立您的愿景，或者创建您自己的安全地区块链网络并在上面开展您的业务。
+                        OpenLedger提供区块链技术开发服务和定制化区块链底层系统的研发，用技术去推动各个行业、商业模式从传统技术到区块链技术的过渡，为业务的转型提供动力。
+                        <br><br>基于革命性的去中心化网络构建新的业务管理软件。
+                        <br><br>通过我们提供的区块链技术服务上建立您的愿景，或者创建您自己的安全地区块链网络并在上面开展您的业务。
                     </div>
                 </div>
                 <div class="col-md-6 banner-bg d-none d-md-block"></div>
@@ -92,7 +92,7 @@
             <div class="col-md-6 image-block-right text-left">
                 <h2>区块链开发</h2>
                 <div class="text">
-                    OpenLedger拥有经验丰富的区块链技术团队来提供专业技术服务，并且为金融、科技、娱乐等其它行业提供定制化的解决方案。
+                    OpenLedger拥有经验丰富的区块链技术团队来提供专业技术服务。
                     <br><br>
                     我们基于全球最受欢迎的区块链底层系统，包括Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)，来进行业务开发，并且根据您现有的需求和规模来设计最佳的解决方案。
                 </div>
@@ -103,9 +103,9 @@
             <div class="col-md-6 image-block-right text-right">
                 <h2>基于区块链的行业解决方案</h2>
                 <div class="text" style="text-align: left;">
-                    <br>OpenLedger为不同的行业提供基于区块链的解决方案。
-                    <br><br>我们以专业的知识和在区块链行业多年累积的经验可以设计满足大规模复杂的业务和安全高效的解决方案，来满足您行业的需求。
-                    <br><br>通过基于区块链技术的业务管理、操作透明和对企业资产的即时把控来促进您企业的发展。
+                    <br>OpenLedger为金融、科技、娱乐等其它行业提供定制化的基于区块链的解决方案。
+                    <br><br>我们以专业的知识和技能以及在区块链行业多年累积的经验可以设计满足大规模复杂的业务和安全高效的解决方案，来满足您行业的需求。
+                    <br><br>通过基于区块链技术的业务管理、操作透明和对企业资产即时完全的把控来促进您企业的发展。
                 </div>
                 <a href="#contact" class="link">联系我们</a>
             </div>
