--- a/views/services/blockchain-development.ejs
+++ b/views/services/blockchain-development.ejs
@@ -76,8 +76,9 @@
             <h2>区块链定制化开发</h2>
             <div class="gor-100 clearfix">
                 <div>
-                    <div class="h4">我们能根据您的业务需求来设计合理的区块链解决方案，并构建去中心化的应用程序。</div>
-                    <div class="h4">从全球领先的区块链底层系统（比特股，EOS，超级账本和以太坊等）中根据您的需求和规模选择出最合适您的底层系统。
+                    <div class="h4">根据您所在的行业和需求来设计合理的解决方案。</div>
+                    <div class="h4">
+                        我们根据您的业务、需求和规模在Hyperledger(超级账本)、EOS、BitShares(比特股)和Ethereum(以太坊)中选择出最适合您的区块链平台，这些平台都是全球领先的，且都是经过市场多年推敲筛选出来的。
                     </div>
                 </div>
             </div>
@@ -230,7 +231,7 @@
                                     <h2 class="h1 color-h2 m-0 p-0">服务流程</h2>
                                 </div>
                                 <div class="col-md-6">
-                                    <p>成功的定制区块链项目需要专业的技能和严格的项目流程把控。我们使用了精心设计的区块链开发流程结合敏捷开发，让您的项目完全按照您的需求去实现。</p>
+                                    <p>要想成功的定制区块链项目并不是一件简单的事情，它需要专业的技能和严格的项目管理。我们使用了精心设计的区块链开发流程结合敏捷开发，让您的项目完全地按照您的需求去实现。</p>
                                     <p>OpenLedger内部的团队包括区块链产品经理、区块链需求分析人员、区块架构师、区块链开发人员、质量保证专家和其它各行业专家，他们将在下面介绍的阶段中启动、设计、规划并交付一个定制的区块链解决方案：
                                     </p>
                                 </div>
@@ -245,7 +246,7 @@
                                                 <h3 class="h2">
                                                     <span>1 <span>/</span></span>项目调研和规划</h3>
                                                 <p class="mt-10px">
-                                                    调研的阶段可能比开发阶段需要更多的时间，因为我们必须确保能够准确地理解您的问题和需求，并设计出一种完美的满足您需求的解决方案。
+                                                    调研的阶段可能比开发阶段时间更长，因为我们必须确保能够准确地理解您的问题和需求，并设计出一种完美的满足您需求的解决方案。
                                                 </p>
                                             </div>
                                             <div class="col-md-6">
@@ -272,7 +273,7 @@
                                                 <h3 class="h2">
                                                     <span>2 <span>/</span></span>开发阶段</h3>
                                                 <p class="mt-10px">
-                                                    此阶段我们以敏捷开发流程作为核心，每天进行站立会议每周进行团队会议，项目经理全天候24小时跟踪项目的进度，并定期向您汇报，让您了解项目最新的情况。
+                                                    此阶段我们以敏捷开发流程作为核心，每天进行站立会议每周进行团队会议，项目经理全天候24小时跟踪项目的进度，并定期向您汇报结果，以便您可以了解到项目的最新进展。
                                                 </p>
                                             </div>
                                             <div class="col-md-6">
