--- a/views/services/graphene-bitshares.ejs
+++ b/views/services/graphene-bitshares.ejs
@@ -40,11 +40,11 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>石墨烯和比特股开发</h1>
-                    <div class="h2-banner">将功能齐全且速度快的石墨烯区块链的潜力发挥出来。</div>
+                    <div class="h2-banner">石墨烯区块链的功能齐全且速度极快</div>
                     <div class="text">
                         <div>
                             <div>
-                                我们经验丰富的石墨烯(Graphene)开发团队将把比特股(BitShares)区块链无缝集成到您企业管理的流程中，使它们更加透明，高效，安全。
+                                我们的Graphene(石墨烯)开发团队可以将BitShares(比特股)无缝集成到您企业管理的流程中。
                             </div>
                         </div>
                     </div>
@@ -64,26 +64,26 @@
                             <div class="point point-accordion">
                                 <h3>高事务吞吐量</h3>
                                 <div class="text">
-                                    <p>石墨烯可以处理超过3000(TPS)，而以太坊可以处理25(TPS)，比特币仅7(TPS)。</p>
+                                    <p>石墨烯可以处理超过3000(TPS)，以太坊可以处理25(TPS)，比特币仅7(TPS)。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>多用途的应用程序</h3>
+                                <h3>用途广泛</h3>
                                 <div class="text">
-                                    <p>石墨烯是开源的，并且它提供一系列的多功能模块，因此可以实现从银行到航空等跨多个行业的多种商业目标。</p>
+                                    <p>石墨烯是开源的，它提供了一系列多功能的模块，因此可以实现从金融到航天等跨行业、领域的商业场景。</p>
                                 </div>
                             </div>
                         </div>
 
                         <div class="col-md-4">
                             <div class="point point-accordion">
-                                <h3>可靠的业绩</h3>
+                                <h3>良好的口碑</h3>
                                 <div class="text">
                                     <p>
-                                        石墨烯自2014年起投入使用到目前为止已经拥有很多广泛的应用，如BitShares(比特股)区块链平台，Steemit去中心化的社交发布门户，以及EOS智能合约生态系统等都是基于石墨烯区块链的。
+                                        石墨烯自2014年起开始投入使用到目前为止已经拥有了很多知名的应用，如BitShares，Steemit去中心化的社交发布门户以及EOS智能合约的生态系统等都是基于石墨烯的。
                                     </p>
                                 </div>
                             </div>
@@ -92,22 +92,22 @@
                 </div>
             </div>
             <div class="enhance-business-content">
-                <h2>使用BitShares(比特股)改变您的业务流程</h2>
+                <h2>使用BitShares(比特股)改进业务流程</h2>
                 <div class="gor-100">
                     <div class="row">
                         <div class="col-md-6">
                             <div class="h4">
                                 <p>
-                                    我们利用最强大和通用的区块链之一 BitShares，帮助企业增强、加速和保护他们的业务流程。
+                                    BitShares是功能强大和通用的区块链平台之一
                                 </p>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <p>
-                                石墨烯的处理能力可高达10万TPS，超过Visa和万事达的处理能力总和，根据Block'tivity的报告，BitShares是世界上第二快的区块链。
+                                石墨烯拥有高达10万TPS的性能，超过了Visa和万事达（全球排名一，二的国际信用卡组织）处理能力的总和。
                             </p>
                             <p>
-                                结合石墨烯开发提供的通用性，这种速度优势意味着我们可以改进数据安全和事务速度相关的每个业务功能：
+                                通过和它提供的通用性相结合，这就意味着它可以解决和改进每个行业、领域和数据安全、事务处理速度相关的业务。
                             </p>
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                         <div class="tile tile-collapse">
                             <h3>客户忠诚度</h3>
                             <div class="text">
-                                我们可以开发您自己的去中心化的客户忠诚度系统。在基于BitShares的系统中，奖励分数可以被视为加密货币：交换、用于购买、捐赠、作为礼物赠送等等。
+                                去中心化的客户忠诚度系统。基于BitShares区块链系统中的奖励分数可以被看作为加密货币用于交换、购买、捐赠、等等。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -126,7 +126,7 @@
                         <div class="tile tile-collapse">
                             <h3>数据交换</h3>
                             <div class="text">
-                                将BitShares集成到公司内部的数据交换系统中，将提高数据流通的安全性，并使过程更加透明。
+                                将BitShares集成到公司内部系统中可以提高数据流通性、安全性并使过程更加透明可追溯。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -135,7 +135,7 @@
                         <div class="tile tile-collapse">
                             <h3>云存储</h3>
                             <div class="text">
-                                去中心化的区块链数据存储允许您控制您的数据，并确保数据不会被删除、破坏或修改。BitShares不仅做到了这一点，还降低了交易成本。
+                                通过去中心化的区块链数据存储允许您完全控制您的数据，并确保数据不会被删除、破坏或篡改。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
                         <div class="tile tile-collapse">
                             <h3>支付</h3>
                             <div class="text">
-                                加速事务处理是改进业务流程的好方法。我们可以无缝地集成BitShares，这样您就可以即时安全地处理支付。
+                                无缝地集成BitShares加快事务的处理是，即时安全地处理支付。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -153,16 +153,16 @@
                         <div class="tile tile-collapse">
                             <h3>网络安全</h3>
                             <div class="text">
-                                我们利用BitShares真正的去中心化来保护您的数据不受未经授权的操作。
+                                不可操作未经过授权许可的数据。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="tile tile-collapse">
-                            <h3>财务跟踪</h3>
+                            <h3>财务审计</h3>
                             <div class="text">
-                                使用BitShares区块链，您可以轻松地跨越国家货币边界，使审计变得不那么复杂。
+                                很容易的创建跨越国家边界的货币，使得审计的工作量减小，安全性大大提高。
                                 <div class="fade-out"></div>
                             </div>
                         </div>
@@ -173,9 +173,9 @@
         <% include ../common/quote.ejs %>
         <div class="container">
             <div class="industry-is-covered-content">
-                <h2>改变你的行业</h2>
+                <h2>改进各个行业</h2>
                 <div class="h4 gor-100">
-                    我们知道如何从多方面上去调整BitShares，以满足您的特定企业需求。几乎任何行业都可以从BitShares开发中受益，这是一些已经投入使用的用例：
+                    从不同的环境调整BitShares，来满足特定的企业需求。可以说任何行业都可以从BitShares中得到好处，这是一些已经投入使用的案例：
                 </div>
                 <div class="industry-is-covered-list">
                     <div class="row">
@@ -186,7 +186,7 @@
                                 <h3>汽车</h3>
                                 <div class="text">
                                     <p>
-                                        我们帮助汽车经销商和经纪人利用区块链从前期生产到销售为他们的客户提供每一辆汽车和零部件的完整历史。
+                                        汽车经销商和销售员利用区块链，为客户提供每一辆汽车和零部件从生产到销售的完整历史。
                                     </p>
                                 </div>
                             </div>
@@ -199,7 +199,7 @@
                                 <h3>供应链</h3>
                                 <div class="text">
                                     <p>
-                                        当涉及到供应链时，透明度是非常关键的。通过利用BitShares，我们可以使货物易于追踪、改进法规遵从管理、安全操作等。
+                                        涉及到供应链时，流程的透明度至关重要。通过利用BitShares，可以使货物易于追踪、改进法规、遵从管理、安全操作等。
                                     </p>
                                 </div>
                             </div>
@@ -212,14 +212,14 @@
                                 <h3>物流</h3>
                                 <div class="text">
                                     <p>
-                                        BitShares开发是改善您的物流流程的方法。这项技术可以让你监控你的车辆行程，并保护跟踪数据不被修改和伪造。
+                                        监控运输车辆的行程，保证跟踪数据不被篡改和伪造。
                                     </p>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="h4 gor-100">作为最具经验的开发团队之一，我们是将石墨烯和BitShares无缝集成到您的业务中的最佳合作方。</div>
+                <div class="h4 gor-100">通过专业的技能和多年区块链行业的经验，我们是把石墨烯和BitShares区块链无缝集成到您的业务流程中的最佳合作方。</div>
             </div>
         </div>
     </div>
