--- a/views/services/hyperledger.ejs
+++ b/views/services/hyperledger.ejs
@@ -40,7 +40,7 @@
             <div class="row">
                 <div class="col-lg-8 col-sm-12">
                     <h1>超级账本开发服务</h1>
-                    <div class="h2-banner h2-banner-indents">我们为您搭建一个先进的企业生态系统，通过超级账本可以保证该生态系统内的业务透明、不可篡改、可审计、可监督。</div>
+                    <div class="h2-banner h2-banner-indents">搭建一个企业生态系统，通过超级账本保证该生态系统内的业务透明、不可篡改、可审计、可被监督。</div>
                     <a href="#contact" class="link">现在联系</a>
                     <div class="bg"></div>
                 </div>
@@ -50,21 +50,21 @@
     <div class="content">
         <div class="container">
             <div class="why-graphene-content">
-                <h2>通过超级账本可以给您的业务带来哪些优势</h2>
-                <div class="h4 gor-100">超级账本通过在网络中去中心化的事务处理实现信任、透明、公平公正。通过精准的问责制度来提高您业务的效率。</div>
+                <h2>超级账本可以给您的业务带来哪些优势</h2>
+                <div class="h4 gor-100">通过去中心化的事务（交易）处理可以实现整个网络中的成员相互信任、事务透明、权利对等。</div>
                 <div class="gor-100">
                     <div class="row advisory-icons hyperledger-icons">
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-1"></div>
-                            <h3>模块化的技术架构</h3>
+                            <h3>架构模块化</h3>
                         </div>
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-2"></div>
-                            <h3>加入网络需要权限许可</h3>
+                            <h3>加入需权限许可</h3>
                         </div>
                         <div class="col-lg-4 df mw-300">
                             <div class="ico ico-3"></div>
-                            <h3>可信任的交易</h3>
+                            <h3>操作互相信任</h3>
                         </div>
                     </div>
                 </div>
@@ -79,10 +79,10 @@
                                 <h3 class="across-toggle">金融</h3>
                                 <ul class="across-sub-menu">
                                     <li>即时结算</li>
-                                    <li>简化支付过程</li>
-                                    <li>改善资金优化</li>
-                                    <li>消除了错误处理和协调</li>
-                                    <li>降低交易方风险</li>
+                                    <li>简化支付</li>
+                                    <!-- <li>改善资金优化</li> -->
+                                    <li>解决操作和协调的失误</li>
+                                    <li>降低交易风险</li>
                                     <li>高级法规报告</li>
                                 </ul>
                             </div>
@@ -94,12 +94,12 @@
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">保险</h3>
                                 <ul class="across-sub-menu">
-                                    <li>多方合同改进</li>
+                                    <li>改进合同</li>
                                     <li>减少周转时间</li>
-                                    <li>风险合同效率改进</li>
+                                    <li>改进风险合同效率</li>
                                     <li>改善KYC合规性</li>
-                                    <li>减少身份盗用风险</li>
-                                    <li>先进的预防欺诈</li>
+                                    <li>降低身份盗用风险</li>
+                                    <li>可预防诈骗</li>
                                 </ul>
                             </div>
                         </div>
@@ -110,12 +110,12 @@
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">媒体</h3>
                                 <ul class="across-sub-menu">
-                                    <li>作者自管理的内容权利</li>
-                                    <li>透明且货币化的C2C/P2P内容共享</li>
-                                    <li>不受国家或地区限制的付费内容订阅</li>
-                                    <li>近实时的许可使用费分配</li>
-                                    <li>改进的反盗版和版权侵权措施</li>
-                                    <li>减少广告欺诈</li>
+                                    <li>作者自管理内容的权利</li>
+                                    <li>C2C/P2P内容共享透明且货币化</li>
+                                    <li>不受国家或地区监管的付费内容订阅</li>
+                                    <!-- <li>实时的许可使用费分配</li> -->
+                                    <li>反盗版和侵权</li>
+                                    <li>预防广告诈骗</li>
                                 </ul>
                             </div>
                         </div>
@@ -126,12 +126,12 @@
                             <div class="business-gain-point-info">
                                 <h3 class="across-toggle">医疗保健</h3>
                                 <ul class="across-sub-menu">
-                                    <li>可追溯的药品和医疗供应链</li>
+                                    <li>可追溯的药品</li>
                                     <li>单向和纵向的患者健康记录</li>
                                     <li>可互操作的电子病历</li>
-                                    <li>简化的帐单</li>
-                                    <li>提供者，保险公司和付款人之间安全的健康信息交换</li>
-                                    <li>便利的索赔裁决</li>
+                                    <!-- <li>简化的帐单</li> -->
+                                    <li>保险公司和患者的健康信息交换</li>
+                                    <li>索赔裁决</li>
                                 </ul>
                             </div>
                         </div>
@@ -144,7 +144,7 @@
             <div class="enhance-business-content">
                 <h2>超级账本开发框架</h2>
                 <div class="gor-100">
-                    <div class="h4">我们可以根据您的业务目标，预期的网络复杂性和事务类型选择更广泛或更专业的超级账本(Hyperledger)框架。
+                    <div class="h4">根据您的业务需求的复杂性和事务类型选择专业的Hyperledger(超级账本)框架。
                     </div>
                 </div>
                 <div
@@ -152,8 +152,7 @@
                     <div class="d-none d-sm-none d-md-block col-md-6 col-lg-4">
                         <div class="hyperledger-tile-img">
                             <img src="/images/Uploads/Hyperledger-frameworks.png"
-                                srcset="/images/Uploads/Hyperledger-frameworks@2x.png 2x"
-                                alt="Hyperledger frameworks">
+                                srcset="/images/Uploads/Hyperledger-frameworks@2x.png 2x" alt="Hyperledger frameworks">
                         </div>
                     </div>
 
