--- a/views/services/index.ejs
+++ b/views/services/index.ejs
@@ -58,18 +58,18 @@
                 </div>
                 <div class="row">
                     <div class="col-xl-6">
-                        <h3 class="h6 mt-40 we-believe-title">我们相信</h3>
+                        <h3 class="h6 mt-40 we-believe-title">我们始终坚信</h3>
                         <div class="text">
                             <div>
-                                <div>区块链技术将成为跨地区、市场和业务领域的新的解决方案，在未来将会成为服务和项目的基础设施。</div>
+                                <div>区块链技术将成为跨地区、市场和领域的新的业务解决方案，在未来将会成为服务行业和实体行业的基础设施。</div>
                             </div>
                         </div>
                     </div>
                     <div class="col-xl-6">
-                        <h3 class="h6 mt-40 we-believe-title">我们正在助力</h3>
+                        <h3 class="h6 mt-40 we-believe-title">我们正在探索</h3>
                         <div class="text">
                             <div>
-                                <div>区块链技术与不同行业进行深度的结合，并且使用专业的技术使项目落地。为您的企业提高办事效率、减少成本、提高收入。</div>
+                                <div>区块链技术与各行业进行深度的结合，挖掘区块链的潜力，并且使用专业的技术使项目真正落地发挥价值。</div>
                             </div>
                         </div>
                     </div>
@@ -83,12 +83,12 @@
             <div class="gor-100">
                 <div class="row">
                     <div class="col-lg-5">
-                        <h3 class="black-desc">定制化区块链开发</h3>
+                        <h3 class="black-desc">定制化区块链服务</h3>
                     </div>
                     <div class="col-lg-7">
                         <div class="row">
                             <div class="col-lg-6">
-                                <p>我们提供安全的、去中心化的区块链技术服务和解决方案，帮助您的行业成功转型。</p>
+                                <p>为您的企业量身打造解决方案并提供技术开发，帮助您的企业成功转型。</p>
                             </div>
                             <div class="col-lg-6">
                                 <a href="/services/blockchain-development/" class="link">了解更多</a>
@@ -102,33 +102,33 @@
 
                     <div class="col-md-6">
                         <div class="tile">
-                            <h3>超级帐本(Hyperledger)开发服务</h3>
-                            <div class="text">通过超级账本，可以实现在您网络中发起的每一个事务之间建立信任、透明度和问责制来支撑您业务的增长。<a class="teal-link"
+                            <h3>Hyperledger(超级帐本)</h3>
+                            <div class="text">通过超级账本，您可以组建一条联盟链，在整个联盟链的网络中发起的每个事务（交易）都是可以信赖的。整条链中的事务虽然透明但不代表所有人都可见，因为这不符合我们的现实生活场景，超级账本的权限设计模块已经解决了这一问题。<a class="teal-link"
                                     href="/services/hyperledger">了解更多</a></div>
                         </div>
                     </div>
 
                     <div class="col-md-6">
                         <div class="tile">
-                            <h3>石墨烯和比特股(BitShares)开发服务</h3>
-                            <div class="text">我们的团队由经验丰富的石墨烯和比特股研发人员组成，他们能够把比特股区块链无缝的集成到您的企业流程中。<a class="teal-link"
+                            <h3>BitShares(石墨烯和比特股)</h3>
+                            <div class="text">我们的技术团队都是经验丰富的Graphene(石墨烯)和BitShares(比特股)研发人员，我们能把BitShares无缝集成到您的企业流程中。<a class="teal-link"
                                     href="/services/graphene-bitshares">了解更多</a></div>
                         </div>
                     </div>
 
                     <div class="col-md-6">
                         <div class="tile">
-                            <h3>智能合约开发服务</h3>
-                            <div class="text">OpenLedger的专家团队专注于使用超级账本(Hyperledger)，EOS和以太坊的智能合约的解决方案来解决现有行业问题。<a
-                                    class="teal-link" href="/services/smart-contract">了解更多</a>
+                            <h3>Smart Contract(智能合约)</h3>
+                            <div class="text">OpenLedger的技术团队对Hyperledger(超级账本)，EOS和Ethereum(以太坊)智能合约的开发也拥有很丰富的经验。
+                                <a class="teal-link" href="/services/smart-contract">了解更多</a>
                             </div>
                         </div>
                     </div>
 
                     <div class="col-md-6">
                         <div class="tile">
-                            <h3>EOSIO开发服务</h3>
-                            <div class="text">EOSIO是一个具有出色运行速度的底层区块链平台，您可以在高度可拓展的环境中构建和运行去中心化的应用程序。<a class="teal-link"
+                            <h3>EOSIO</h3>
+                            <div class="text">EOSIO是一个在性能上、可拓展性上都非常出色的底层区块链平台。<a class="teal-link"
                                     href="/services/eosio">了解更多</a></div>
                         </div>
                     </div>
