--- a/views/services/smart-contract.ejs
+++ b/views/services/smart-contract.ejs
@@ -39,7 +39,7 @@
             <div class="row">
                 <div class="col-lg-6 col-sm-12">
                     <h1>智能合约开发服务</h1>
-                    <div class="h2-banner">超级账本，以太坊和EOS智能合约的审核和开发</div>
+                    <div class="h2-banner">超级账本，以太坊和EOS智能合约的审核和开发服务</div>
                     <div class="text">
                         <div>
                             <div></div>
@@ -58,8 +58,8 @@
                 <h2>企业智能合约</h2>
                 <div class="h4 gor-100">
                     <p>智能合约是一种编码为计算机协议的虚拟协议。</p>
-                    <p>任何一方，包括两个协议的持有人，都不能改变智能合约的内容。如果要想更改，必须由网络中所有的节点同意才能更改。</p>
-                    <p>智能合约是可以自动执行的，因此智能合约是实现跨各行业、领域的强大工具。OpenLedger的专家团队致力于基于超级账本、以太坊、和EOS的智能合约为现有行业所面临的问题提供解决方案。
+                    <p>任何一方，包括两个协议的持有人，都不能改变智能合约的内容。如果要想更改，必须由网络中所有的节点认可才能更改。</p>
+                    <p>智能合约可以自动化执行，因此智能合约是实现跨各行业、领域的强大工具。OpenLedger的技术团队可以基于Hyperledger(超级账本)、Ethereum(以太坊)、和EOS的智能合约研发为各个行业所面临的不同的问题提供解决方案。
                     </p>
                 </div>
                 <div class="industry-is-covered-list sc-list">
@@ -127,7 +127,7 @@
                                         <div class="point point-accordion">
                                             <h3>信任</h3>
                                             <div class="text">
-                                                <p>智能合约都是公开且透明的，可以确保企业和客户之间的交易或是达成的某种协议是可以被验证的。</p>
+                                                <p>智能合约都是去中心化的，可以确保企业和客户之间的交易或是达成的某种协议是可以被验证的。</p>
                                             </div>
                                         </div>
                                     </div>
@@ -135,7 +135,7 @@
                                         <div class="point point-accordion">
                                             <h3>节省资金</h3>
                                             <div class="text">
-                                                <p>基于智能合约的自动化操作减少了人工的处理并且预防了人为的误操作，从而降低了风险和成本。</p>
+                                                <p>基于智能合约的自动化操作可以减少人工的处理并且预防了人为的误操作，从而降低了风险和成本。</p>
                                             </div>
                                         </div>
                                     </div>
@@ -143,7 +143,7 @@
                                         <div class="point point-accordion">
                                             <h3>备份</h3>
                                             <div class="text">
-                                                <p>基于区块链技术的智能合约不会存在冗余、丢失的情况并且确保安全，防篡改。</p>
+                                                <p>去中心化的智能合约不会存在冗余、丢失的情况并且确保安全，防篡改。</p>
                                             </div>
                                         </div>
                                     </div>
@@ -151,7 +151,7 @@
                                         <div class="point point-accordion">
                                             <h3>准确性</h3>
                                             <div class="text">
-                                                <p>自动进行记录保存，存储和检索来消除人为错误。</p>
+                                                <p>自动保存数据和检索，消除人为操作错误。</p>
                                             </div>
                                         </div>
                                     </div>
@@ -159,7 +159,7 @@
                                         <div class="point point-accordion">
                                             <h3>速度</h3>
                                             <div class="text">
-                                                <p>智能合约通过自动化使业务流程变得更加快速、高效。</p>
+                                                <p>自动化执行使业务处理快速、高效。</p>
                                             </div>
                                         </div>
                                     </div>
@@ -172,8 +172,8 @@
                             <h2 class="mt-40">OpenLedger开发的智能合约</h2>
                             <div class="gor-100">
                                 <div class="h4">
-                                    <p>通过在以太坊(Ethereum)、EOS或超级账本(Hyperledger)中的智能合约来自动化处理业务流程。</p>
-                                    <p>通过基于区块链的解决方案和区块链的技术结合，我们的开发工程师可以快速编写安全地且符合您的需求的智能合约。</p>
+                                    <p>通过在Hyperledger(超级账本)、Ethereum(以太坊)、EOS中的智能合约来自动化处理业务流程。</p>
+                                    <p>通过基于区块链的解决方案和技术结合，我们的研发工程师可以快速编写安全且符合您的需求的智能合约代码。</p>
                                 </div>
                             </div>
                             <div id="ethereum-smart-contracts"></div>
@@ -186,14 +186,14 @@
                                             <div class="text">
                                                 <div class="new-list-wrap">
                                                     <div class="new-list-col-4">
-                                                        <p>通过Solidity语言编写的智能合约能够最大限度地提高您公司的生产效率。</p>
+                                                        <p>通过Solidity语言编写的智能合约。</p>
                                                     </div>
                                                     <div class="new-list-col-8">
                                                         <div class="new-list">
                                                             <h4>以太坊的Solidity智能合约：</h4>
                                                             <div class="new-list-points">
                                                                 <ul>
-                                                                    <li>ERC-20代币合约</li>
+                                                                    <li>ERC-20通证合约</li>
                                                                 </ul>
                                                                 <ul>
                                                                     <li>ERC-721智能合约</li>
