--- a/views/services/hyperledger.ejs
+++ b/views/services/hyperledger.ejs
@@ -144,7 +144,7 @@
             <div class="enhance-business-content">
                 <h2>超级账本开发框架</h2>
                 <div class="gor-100">
-                    <div class="h4">根据您的业务需求的复杂性和事务类型选择专业的Hyperledger(超级账本)框架。
+                    <div class="h4">根据您的业务需求的复杂性以及事务类型选择专业的Hyperledger(超级账本)框架。
                     </div>
                 </div>
                 <div
